# Modul_6_ML-UAP_Haidar-Dimas-Heryanto

./: README.md  app.py  pyproject.toml
model/cnn/: cnn_model.weights.h5  cnn_model_20251224_023624.keras  cnn_model_architecture.json  cnn_model_config.json  cnn_model_history.json  cnn_model_instructions.txt  cnn_model_metrics.json  cnn_model_summary.txt
model/mobilenet/: mobilenetv2_model.keras  mobilenetv2_model.weights.h5  mobilenetv2_model_20251224_080243.keras  mobilenetv2_model_architecture.json  mobilenetv2_model_config.json  mobilenetv2_model_history.json  mobilenetv2_model_instructions.txt  mobilenetv2_model_metrics.json  mobilenetv2_model_summary.txt
model/resnet/: resnet50_model.keras  resnet50_model.weights.h5  resnet50_model_architecture.json  resnet50_model_config.json  resnet50_model_history.json
model/vgg/: vgg16_model.keras  vgg16_model.weights.h5  vgg16_model_20251224_100208.keras  vgg16_model_architecture.json  vgg16_model_class_indices.json  vgg16_model_config.json  vgg16_model_history.json  vgg16_model_history_stages.json  vgg16_model_metrics.json  vgg16_model_summary.txt
