[project]
name = "streamlit-citra-uap"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dimashery", email = "zayndimas18@gmail.com"},
]
dependencies = ["streamlit>=1.52.2", "tensorflow>=2.20.0", "pillow>=12.0.0", "numpy>=2.4.0", "pandas>=2.3.3", "plotly>=6.5.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
